--- a/Android Studio Project/app/src/main/res/layout/activity_main.xml
+++ b/Android Studio Project/app/src/main/res/layout/activity_main.xml
@@ -1,79 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.teaching.arduino.MainActivity">
+    tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/listview2"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_above="@+id/forward"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/available" />
-
-    <Button
-        android:text="Scan Devices"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scan"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <Button
-        android:id="@+id/forward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forward"
-        android:layout_above="@+id/back"
-        android:layout_centerHorizontal="true" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <Button
-        android:id="@+id/dc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Disconnect"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+    </android.support.design.widget.AppBarLayout>
 
-    <Button
-        android:id="@+id/right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/left"
-        android:layout_alignBottom="@+id/left"
-        android:layout_alignStart="@+id/dc"
-        android:layout_marginStart="11dp"
-        android:text="Right" />
+    <include layout="@layout/content_main" />
 
-    <Button
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Backward"
-        android:layout_above="@+id/scan"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Left"
-        android:layout_marginBottom="21dp"
-        android:layout_above="@+id/scan"
-        android:layout_alignEnd="@+id/available" />
-
-    <TextView
-        android:text="Available Devices"
-        android:id="@+id/available"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
